fix white space in marquee scrolling

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -860,7 +860,7 @@ pre code {
 }
 
 @keyframes marquee {
-    0% { transform: translateX(100%); }
+    0% { transform: translateX(0%); }
     100% { transform: translateX(-100%); }
 }
 
